--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html lang="en">
 
 <head>
-  <title>Index Page</title>
+  <title>Index page</title>
 </head>
 
 <body>
-  <p>This is a index page</p>
+  <p>This is an index page</p>
 </body>
 
 </html>
