--- a/SamplePageFiles/SamplePage.html
+++ b/SamplePageFiles/SamplePage.html
@@ -7,11 +7,11 @@
 <!--HTML Head Code Starts-->
 
 <head>
-  <title>Home</title>
+  <title>Blog Title</title>
   <meta charset="UTF-8">
   <meta name="author" content="Royal Aliyev">
-  <meta name="description" content="My Articles">
-  <meta name="keywords" content="Artificial Intellegence, Machine Learning, Image Processing, Video Processing, Electronics">
+  <meta name="description" content="About Blog">
+  <meta name="keywords" content="Keyword1,Keyword2,Keyword3,Keyword4,Keyword5">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="SamplePage.css" />
