--- a/Sample/WebPageFiles/WebPage.html
+++ b/Sample/WebPageFiles/WebPage.html
@@ -14,10 +14,10 @@
   <meta name="keywords" content="Keyword1,Keyword2,Keyword3,Keyword4,Keyword5">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="SamplePage.css" />
-  <link rel="stylesheet" type="text/css" href="PortraitSmartphoneSamplePage.css" />
-  <link rel="stylesheet" type="text/css" href="UnsupportedDevices.css" />
-  <link rel="stylesheet" type="text/css" href="DesktopSamplePage.css" />
+  <link rel="stylesheet" type="text/css" href="WebPage.css" />
+  <link rel="stylesheet" type="text/css" href="PortraitSmartphoneWebPage.css" />
+  <link rel="stylesheet" type="text/css" href="UnsupportedDevicesWebPage.css" />
+  <link rel="stylesheet" type="text/css" href="DesktopWebPage.css" />
 </head>
 <!--........................................................................................................................................................................................-->
 <!--HTML Body Code Starts-->
@@ -84,7 +84,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="ajax.js" type="text/javascript"></script>
-    <script src="SamplePage.js" type="text/javascript"></script>
+    <script src="WebPage.js" type="text/javascript"></script>
   </div>
   <!--........................................................................................................................................................................................-->
   <!--HTML Unsupported Devices Mode Code Starts-->
