--- a/S.O.L.I.D./Introduction/WebPageFiles/WebPage.html
+++ b/S.O.L.I.D./Introduction/WebPageFiles/WebPage.html
@@ -27,7 +27,7 @@
   <!--HTML Supported Devices Mode Code Starts-->
   <div class="hideAllDivClass">
     <div class="titleDivClass">
-      <h1>O.O.P. and S.O.L.I.D. principles</h1>
+      <p class="titlePClass">O.O.P. and S.O.L.I.D. principles</p>
     </div>
     <div class="introductionDivClass">
       <p>
