--- a/S.O.L.I.D./Introduction/WebPageFiles/WebPage.html
+++ b/S.O.L.I.D./Introduction/WebPageFiles/WebPage.html
@@ -58,6 +58,10 @@
         &emsp;In these sequence of blogs we will talk about S.O.L.I.D. principles that almost should be used everywhere where there is O.O.P. as a concept.
       </p>
     </div>
+    <div class="endingDivClass">
+      <button class="endingPreviousButtonClass">Previous</button>
+      <button class="endingNextButtonClass">Next</button>
+    </div>
     <!--........................................................................................................................................................................................-->
     <!--HTML Body Desktop JavaScript Files Starts-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
