--- a/Sample/WebPageFiles/WebPage.html
+++ b/Sample/WebPageFiles/WebPage.html
@@ -36,11 +36,11 @@
         specimen
         book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
       </p>
-      <img src="Sample.png" class="img-fluid" alt="Logo Here" style="position: relative; top: 0vh; left: 31vw;">
+      <img src="Sample.png" class="img-fluid introductionImageClass" alt="Logo Here">
       <p>
         recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       </p>
-      <img src="Sample.png" class="img-fluid" alt="Logo Here" style="position: relative; top: 0vh; left: 31vw;">
+      <img src="Sample.png" class="img-fluid introductionImageClass" alt="Logo Here">
     </div>
     <div class="methodDivClass">
       <h2>Method</h2>
@@ -77,6 +77,10 @@
       <p>
         URL link
       </p>
+    </div>
+    <div class="endingDivClass">
+      <button class="endingPreviousButtonClass">Previous</button>
+      <button class="endingNextButtonClass">Next</button>
     </div>
     <!--........................................................................................................................................................................................-->
     <!--HTML Body Desktop JavaScript Files Starts-->
