--- a/S.O.L.I.D./Introduction/WebPageFiles/WebPage.html
+++ b/S.O.L.I.D./Introduction/WebPageFiles/WebPage.html
@@ -7,11 +7,11 @@
 <!--HTML Head Code Starts-->
 
 <head>
-  <title>Blog Title</title>
+  <title>S.O.L.I.D.</title>
   <meta charset="UTF-8">
   <meta name="author" content="Royal Aliyev">
   <meta name="description" content="Introduction to S.O.L.I.D. principles">
-  <meta name="keywords" content="Java,OOP,SOLID principles, Clean Code, Clean Architecture">
+  <meta name="keywords" content="Java,OOP,SOLID principles,Clean Code,Clean Architecture">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="WebPage.css" />
