--- a/GWO/WebPageFiles/WebPage.html
+++ b/GWO/WebPageFiles/WebPage.html
@@ -57,7 +57,7 @@
         More details in the code snippet below.
       </p>
     </div>
-    <div class="codeSnippetClass">
+    <div class="codeSnippetDivClass">
       <p>
         &emsp;&emsp;&emsp;//Initialization Starts Here<br />
         &emsp;&emsp;&emsp;System.out.println("Gray Wolf Initialization Starts...");<br />
