--- a/GWO/WebPageFiles/WebPage.html
+++ b/GWO/WebPageFiles/WebPage.html
@@ -7,7 +7,7 @@
 <!--HTML Head Code Starts-->
 
 <head>
-  <title>Blog Title</title>
+  <title>GWO in Java</title>
   <meta charset="UTF-8">
   <meta name="author" content="Royal Aliyev">
   <meta name="description" content="Gray Wolf Optimizer">
@@ -125,7 +125,7 @@
     </div>
     <div class="appendicesDivClass">
       <h2>Appendices</h2>
-      <a href="https://github.com/aliyevroyal/GWO" target="_blank">Source code in Java programming language</a>
+      <a href="https://github.com/aliyevroyal/GWO" target="_blank">Source code</a>
     </div>
     <div class="endingDivClass">
     </div>
