--- a/GWO/WebPageFiles/WebPage.html
+++ b/GWO/WebPageFiles/WebPage.html
@@ -125,7 +125,7 @@
     </div>
     <div class="appendicesDivClass">
       <h2>Appendices</h2>
-      <a href="https://github.com/aliyevroyal/GWO" target="_blank">Source code</a>
+      <a href="https://github.com/aliyevroyal/GWO" target="_blank">&#8226; Source code</a>
     </div>
     <div class="endingDivClass">
     </div>
