--- a/GWORRTPathPlanning/WebPageFiles/WebPage.html
+++ b/GWORRTPathPlanning/WebPageFiles/WebPage.html
@@ -10,7 +10,7 @@
   <title>GWO and RRT Path Planning</title>
   <meta charset="UTF-8">
   <meta name="author" content="Royal Aliyev">
-  <meta name="description" content="About Blog">
+  <meta name="description" content="GWO and RRT for Path Planning">
   <meta name="keywords" content="PathPlanning,GWO,RRT,Drones,UAVs">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
