--- a/QLearning/WebPageFiles/WebPage.html
+++ b/QLearning/WebPageFiles/WebPage.html
@@ -32,14 +32,14 @@
     <div class="introductionDivClass">
       <h2>Q Learning</h2>
       <p>
-        &emsp; Today one of the most hot topic in both science and engineering is Artificial Intelligence (AI). But combination of these two words is very comprehensive litteraly. It is very easy to get confused by terms are used in the modern
-        technology. So Machine Learning (ML) is mostly considered while people are talking about AI. But Machine Learning is just subset of modern Artificial Intelligence that let computers learn and act without any help from humans. There are even
-        subsets of Machine Learning algorithms. And all these subset algorithms provide computers with various ways of learning methods to solve various type of engineering problems. Below, in the figure you can see well known taxonomy of ML:
+        &emsp; Nowadays one of the most hot topic in both science and engineering is Artificial Intelligence (AI). But combination of these two words is very comprehensive litteraly. It is very easy to get confused by terms are used in the modern
+        technology. So Machine Learning (ML) is mostly considered while people are talking about AI. But Machine Learning is just a subset of modern Artificial Intelligence that let computers learn and act without any help from humans. There are even
+        other subsets of Machine Learning algorithms. And all these subset algorithms provide computers with various ways of learning methods to solve various type of engineering problems. Below, in the figure you can see well known taxonomy of ML:
       </p>
       <img src="MLTaxonomy.png" class="img-fluid introductionImageClass" alt="Logo Here">
       <p>
         &emsp; As mentioned before all these categorized algorithms are designed to look at the problems from different point of views and solve them. But in this blog I will talk about Q Learning is just categorized just under RL. This blog will
-        help for beginners to create basic imagination about this algorithm and I will share my framework written in Java.
+        help for beginners to get basic imagination about this algorithm and I will share my framework written in Java.
       </p>
       <p>
         &emsp; Q Learning first was developed by Chris Watkins in 1989 and proved by again Watkins and Dayan in 1992. Two most common versions of algorithm are avialable as well; Deep Q Learning and Double Q Learning.
@@ -55,11 +55,11 @@
       <p>
         &emsp; These three components are called Reward table, Q Values table and Bellman equation (named after Richard E. Bellman) relatively. Reward table can be provided by us or created programmatically due to the problem itself. WIth this table
         matrix we can reward or penalize our agent for its actions. We can think of Q Values table matrix as experience of agent. In the beginning it does not know anything at all about environments so all elements of Q Values table are equal to
-        zero. As out agent discover the environment and gets experiences it learns from environment and update Q Values table. And each experience can be calculated with Bellman equation mathematically.
+        zero. As our agent discovers the environment and gets experiences it learns from environment and updates Q Values table. And each experience can be calculated with Bellman equation mathematically.
       </p>
       <p>
-        &emsp; In the end of the Learning session (just after iterations in other words) our agent’s experience (Q Values table) can be saved for later use. As mentioned before source code this algorithm can be found at the Appendices section. This
-        source code can be used as a framework. And as a example demo code has been created to show how developers can implement this algoriyhm to their applications.
+        &emsp; At the end of the learning session (just after iterations in other words) our agent’s experience (Q Values table) can be saved for later use. As mentioned before source code this algorithm can be found at the Appendices section. This
+        source code can be used as a framework. And an example demo code has been created to show developers how they can implement this algoriyhm to their applications.
       </p>
     </div>
     <div class="appendicesDivClass">
