--- a/QLearning/WebPageFiles/WebPage.html
+++ b/QLearning/WebPageFiles/WebPage.html
@@ -59,7 +59,7 @@
       </p>
       <p>
         &emsp; At the end of the learning session (just after iterations in other words) our agent’s experience (Q Values table) can be saved for later use. As mentioned before source code this algorithm can be found at the Appendices section. This
-        source code can be used as a framework. And an example demo code has been created to show developers how they can implement this algoriyhm to their applications.
+        source code can be used as a framework. And an example demo code has been created to show developers how they can implement this algorithm to their applications.
       </p>
     </div>
     <div class="appendicesDivClass">
