--- a/QLearning/WebPageFiles/WebPage.html
+++ b/QLearning/WebPageFiles/WebPage.html
@@ -66,6 +66,8 @@
       <h2>Appendices</h2>
       <a href="https://github.com/aliyevroyal/ReinforcementLearning" target="_blank">&#8226; Source code</a>
     </div>
+    <div class="endingDivClass">
+    </div>
     <!--........................................................................................................................................................................................-->
     <!--HTML Body Desktop JavaScript Files Starts-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
