--- a/QLearning/WebPageFiles/WebPage.html
+++ b/QLearning/WebPageFiles/WebPage.html
@@ -10,7 +10,7 @@
   <title>Reinforcement Learning</title>
   <meta charset="UTF-8">
   <meta name="author" content="Royal Aliyev">
-  <meta name="description" content="About Blog">
+  <meta name="description" content="Q Learning Blog">
   <meta name="keywords" content="Reinforcement Learning,Q Values Learning,Machine Learning,Java,Framework">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
