--- a/Sample/WebPageFiles/WebPage.html
+++ b/Sample/WebPageFiles/WebPage.html
@@ -74,13 +74,9 @@
     </div>
     <div class="appendicesDivClass">
       <h2>Appendices</h2>
-      <p>
-        URL link
-      </p>
+      <a href="" target="_blank">&#8226; Source code</a>
     </div>
     <div class="endingDivClass">
-      <button class="endingPreviousButtonClass">Previous</button>
-      <button class="endingNextButtonClass">Next</button>
     </div>
     <!--........................................................................................................................................................................................-->
     <!--HTML Body Desktop JavaScript Files Starts-->
